[package]
name = "practical-lr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3", default-features = false, features = ["fiat_u64_backend", "serde"] }
group = "0.11"
bls12_381 = { version = "0.6.0", features = ["experimental"] }
rand = "0.7"
sha2 = "0.9"
serde = { version = "1", features = ["derive"]}
bincode = "1"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "plain"
harness = false

[[bench]]
name = "leakage_resilient_aim"
harness = false

[[bench]]
name = "leakage_resilient_cml"
harness = false